# plastic-promise-release

./: .data  .editorconfig  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  BUILD_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GOAL.md  LICENSE  Makefile  README.md  SECURITY.md  agent_supervisor.py  bootstrap.py  maintenance_daemon.heartbeat  market-index.yml  mcp.json  package.json  pi_daemon.py  pi_listener.ps1  pi_worker.ps1  pi_worker.sh  plastic_memory.db-shm  plastic_memory.db-wal  pyproject.toml  requirements.txt  skills-lock.json  start-all.bat  start-all.sh  step_audit_log.jsonl  watchdog.ps1
.codex/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  delegation.md  feature_request.md
.github/workflows/: ci.yml  release-sync.yml
.pi/: mcp.json  memory.md  team-protocol-reviewer.md  team-protocol.md
.pi/extensions/: interop-bridge.ts
.superpowers/sdd/: task-3-report.md
.trae/: hooks.json  mcp.json  rules
.trae/hooks/: sp_hook.py
bridge/: __init__.py  bus_client.py  event-bus.ts  http_memory.py  neko_adapter.py  soul_bridge.py  sync-coordinator.ts
claude/: plugin.json
daemons/: audit_daemon.py  maintenance_daemon.py  pi_daemon.py  pi_worker.ps1  pi_worker.sh  watchdog.ps1
docs/: BUILD_PLAN.md  DEVELOPER.md  GOAL.md  README.zh-CN.md  SYSTEM_FULL_CHAIN.md  disk-space-investigation.md
docs/TODO List/: 01-comparison-analysis.md  02-retrieval-enhancement.md  03-smart-extraction-upgrade.md  04-infrastructure-gaps.md  05-integration-roadmap.md  06-causal-world-model-roadmap.md  06-rust-engine-gaps.md  07-causal-world-model-roadmap.md  README.md
docs/architecture/: architecture.md  implementation-notes.md
docs/engineering-patterns/: 2026-07-12-ordinary-memory-caller-inventory.md  2026-07-19-memos-openmemory-exemplar-research.md  (+3 more)
experience_packs/: operations.json  test_ops.json
memory/: degradation-must-be-explicit.md  lazy-init-concurrent-race.md  superpowers-worktrees-not-optional.md
plastic_promise/: __init__.py  __main__.py  adaptive_retrieval.py  agent.py  behavior.py  constants.py  embedder.py  issue.py  noise_filter.py  pack.py  smart_extractor.py  step_auditor.py
rust/context-engine-core/: Cargo.toml
rust/context-engine-core/.cargo/: config.toml
rust/context-engine-core/src/: association_feedback.rs  chunking.rs  context_engine.rs  entity_graph.rs  lib.rs  memory_worth.rs  principles.rs  rank_fuser.rs  source_tracker.rs
rust/context-engine-core/src/domain/: consolidator.rs  decay.rs  mod.rs  tier.rs  worth.rs
rust/context-engine-core/src/retrieval/: bm25.rs  diversity.rs  embedder.rs  fusion.rs  mod.rs
rust/context-engine-core/src/storage/: lancedb_impl.rs  mod.rs  schema.rs  sqlite_impl.rs
rust/context-engine-core/tests/: chunking_test.rs  integration_test.rs
scripts/: benchmark_chunking_shadow.py  benchmark_recall_quality.py  bootstrap.py  eco.py  event-bus.ts  http_mcp_harness.py  init_and_start.py  rebuild_lancedb.py  release-sync.py  repair_zero_vectors.py  smoke_http_mcp.py  smoke_restart_recovery.py  start-all.bat  start-all.sh  start_all.bat  system_audit.py  test_recall.py
tests/: test_auto_context_inject.py  test_behavior_graph_schema.py  test_boundary.py  test_canonical_hot_memory.py  test_cei_access.py  test_chunking.py  test_chunking_benchmark.py  test_code_memory.py  test_codex_config.py  test_commercial_audit_export.py  test_commitment_integration.py  test_context_engine_heavy_init.py  test_context_gate.py  test_context_recommender.py  test_dashboard_v2_repository.py  test_dashboard_v2_routes.py  test_date_helpers.py  test_decay_config.py  test_decay_engine.py  test_decay_update.py  test_direction_ab_e2e.py  test_domain_e2e.py  test_domain_manager.py  test_e2e_skill_pipeline.py  test_embedder.py  test_exemplar_research.py  test_fusion_policy.py  test_governed_scanner_boundaries.py  test_governed_synthesis_e2e.py  test_hunter_guild_e2e.py  test_hunter_penalty.py  test_hunter_rank.py  test_issue_validator.py  test_lancedb_store.py  test_launcher.py  test_lightweight_startup_tools.py  test_list_memories_paginated.py  test_maintenance_scheduler.py  test_mcp_claude_code_schema_regression.py  test_memory_merge.py  (+67 more)
tools/: perf_check.py  verify_merge.py
utils/: date_helpers.py  logger.py  math_helpers.py  retry.py  validator.py
(+295 files in other folders)
