[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plastic-promise"
version = "0.1.0"
description = "AI 行为治理系统 — 以约定工程替代约束工程"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Plastic Promise Contributors" },
]
keywords = [
    "ai-governance",
    "mcp-server",
    "agent-memory",
    "commitment-engineering",
    "context-engine",
    "llm-agent",
    "multi-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "lancedb>=0.6.0",
    "sentence-transformers>=2.2.0",
    "uvicorn[standard]>=0.27.0",
    "starlette>=0.36.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
rust = [
    "maturin>=1.4",
]
code-memory = [
    "codebase-memory-mcp>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/plastic-promise/plastic-promise"
Documentation = "https://github.com/plastic-promise/plastic-promise#readme"
Repository = "https://github.com/plastic-promise/plastic-promise"
Issues = "https://github.com/plastic-promise/plastic-promise/issues"

[project.scripts]
plastic-promise = "plastic_promise.cli:main"
plastic-promise-sse = "plastic_promise:main_sse"

# ============================================================
# Ruff — 代码规范 & 格式化
# ============================================================
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "rust",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking-imports
]
ignore = [
    "E501", # line-too-long (handled by formatter)
    "N818", # exception-naming (allow non-"Error" suffix)
]

[tool.ruff.lint.isort]
known-first-party = ["plastic_promise"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ============================================================
# pytest
# ============================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a running MCP server or external services",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
    "--cov=plastic_promise",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["plastic_promise"]
omit = ["tests/*", "rust/*"]

# ============================================================
# mypy — 静态类型检查
# ============================================================
[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["rust/", "tests/", "build/", "dist/"]