[package]
name = "context-engine-core"
version = "0.1.0"
edition = "2021"
description = "Plastic Promise 上下文供应引擎 — Rust 核心"

[lib]
name = "context_engine_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py310"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
# uuid removed — using timestamp-based IDs to avoid getrandom→dlltool dependency

[profile.release]
opt-level = 3
lto = true
